<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/user_sign_up_fragment"
    tools:context=".view.UserSignUpFragment">

    <TextView
        android:id="@+id/create_account_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:maxLines="2"
        android:text="@string/create_an_account_to_continue"
        android:layout_marginStart="30dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-light"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_name_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_name"
        android:layout_marginTop="30dp"
        app:helperTextEnabled="true"
        app:helperText="Name is required"
        app:layout_constraintTop_toBottomOf="@id/create_account_text"
        app:startIconDrawable="@drawable/user_name_icon"
        app:boxStrokeColor="@color/orange_qat"
        app:hintTextColor="@color/orange_qat"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_sign_up_email_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_sign_up_email"
        android:layout_marginTop="30dp"
        app:helperTextEnabled="true"
        app:helperText="Email is required"
        app:startIconDrawable="@drawable/email_icon"
        app:boxStrokeColor="@color/orange_qat"
        app:hintTextColor="@color/orange_qat"
        app:layout_constraintTop_toBottomOf="@id/user_name_text_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_password"
        android:layout_marginTop="30dp"
        app:helperTextEnabled="true"
        app:errorEnabled="true"
        app:errorTextColor="@color/orange_qat"
        app:startIconDrawable="@drawable/password_icon"
        app:boxStrokeColor="@color/orange_qat"
        app:hintTextColor="@color/orange_qat"
        app:layout_constraintTop_toBottomOf="@id/user_sign_up_email_text_field"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/user_sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="180dp"
        android:textAllCaps="false"
        android:text="@string/sign_up"
        android:backgroundTint="@color/orange_qat"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/already_have_an_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/user_sign_up_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/already_have_an_account"
        android:layout_marginStart="65dp"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/signIn_button_in_signUp_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textColor="@color/orange_qat"
        android:textSize="15sp"
        android:text="Sign in"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintStart_toEndOf="@id/already_have_an_account_text"
        app:layout_constraintTop_toBottomOf="@id/user_sign_up_button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>