<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#836495">

    <TextView
        android:id="@+id/create_account_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:maxLines="2"
        android:text="@string/create_an_account_to_continue"
        android:layout_marginStart="30dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/et"
        android:layout_marginTop="60dp"
        android:layout_width="330dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="Your Name"
        android:backgroundTint="@color/design_default_color_on_primary"
        android:padding="20dp"
        android:background="@drawable/email_edittext"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/create_account_text"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/email"
        android:layout_marginTop="30dp"
        android:layout_width="330dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="Your Email"
        android:backgroundTint="@color/design_default_color_on_primary"
        android:padding="20dp"
        android:background="@drawable/email_edittext"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/password"
        android:layout_marginTop="30dp"
        android:layout_width="330dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="Your Password"
        android:backgroundTint="@color/design_default_color_on_primary"
        android:padding="20dp"
        android:background="@drawable/email_edittext"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/ign_in_button"
        android:layout_width="250dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:layout_marginBottom="70dp"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:text="@string/sign_up"
        android:background="@drawable/round_button"
        app:backgroundTint="#12141D"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/already_have_an_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ign_in_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/already_have_an_account"
        android:fontFamily="sans-serif"
        android:textAllCaps="false"
        android:gravity="center"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="20sp"
        android:layout_marginStart="50dp"
        />

    <Button
        android:id="@+id/textButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textColor="#12141D"
        android:textSize="20sp"
        android:layout_marginTop="18dp"
        android:padding="8dp"
        android:text="Sign in"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintStart_toEndOf="@id/already_have_an_account_text"
        app:layout_constraintTop_toBottomOf="@id/ign_in_button"
        />
</androidx.constraintlayout.widget.ConstraintLayout>