<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/first_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DashboardFragment">


    <!-- A CardView that contains a TextView -->
    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_tvet_books"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        card_view:cardCornerRadius="5dp"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@id/card_view_recommended">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/dashboard_list_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/orange_qat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/TVET_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/tvet"
                android:textSize="25sp"
                android:textStyle="bold" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tvet_books_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/TVET_text"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_recommended"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="5dp"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginStart="10dp"
            android:hint="@string/book_searchquery_hint_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/books_search_bar_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/books_search_button"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:layout_gravity="end"
            android:layout_marginTop="94dp"
            android:background="@drawable/search_button"
            android:text="@string/search_books_button"
            android:textAllCaps="false"
            app:backgroundTint="@color/design_default_color_primary" />

        <RelativeLayout
            android:id="@+id/welcome_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange_qat">

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:padding="8dp"
                android:text="Welcome"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/username_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/welcome_text"
                android:padding="16dp"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/start_exploring_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="sans-serif"
                android:padding="8dp"
                android:text="Start exploring our huge collection of books"
                android:textColor="@color/design_default_color_on_primary"
                android:textSize="12sp"
                android:textStyle="bold" />

        </RelativeLayout>


        <TextView
            android:id="@+id/recommended_category_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:fontFamily="sans-serif"
            android:text="Recommended"
            android:textSize="25sp"
            android:textStyle="bold" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recommended_books_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/books_not_found_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/oops_book_not_found_warning_message"
            android:textColor="@color/design_default_color_error"
            android:textSize="30sp"
            android:visibility="invisible"
            android:layout_marginTop="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>